--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,2 +1,6 @@
+@import "style/mixins";
+@import "style/settings";
+
 @import "pages/home/home";
 @import "components/navbar/navbar";
+@import "components/footer/footer";
