🚑 create form addEmployed

--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -1,7 +1,7 @@
 .navBar {
   display: flex;
   flex-direction: row;
-  background: #6D841A;
+  background: #458846;
   align-items: center;
   font-size: 22px;
   padding-left: 10%;
