--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,3 +4,6 @@
 @import "pages/home/home";
 @import "components/navbar/navbar";
 @import "components/footer/footer";
+@import "components/form/form";
+@import "pages/addEmployee/addEmployee";
+
