--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   padding: 1rem 0 1.5rem;
-  background-color: #6D841A;
+  background-color: $green;
   height: 25px;
  
 &__content {
