--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -26,7 +26,7 @@ width: 80vw;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  border: 1px solid #94B229;
+  border: 1px solid $green;
   border-radius: 10px;
   position: absolute;
   top: 50%;
@@ -49,7 +49,7 @@ width: 80vw;
 span  {
   display: flex;
   font-size: 35px;
-  color: rgb(111, 143, 111);
+  color:$greenButton;
   @include min-max ($smartphone, $smartLarge - 1 ){
     font-size: 19px;
     line-height: 10px;
@@ -79,7 +79,7 @@ span  {
   margin-top: 20px;
   gap: 8px;
   &__add {
-  background-color: rgb(111, 143, 111);
+  background-color: $greenButton;
   color: white;
   text-align: center;
   }
@@ -92,7 +92,7 @@ span  {
 
 &__view {
   background-color: white;
-  color: rgb(111, 143, 111);
+  color:$greenButton;
   text-align: center;
 
 }
