🚑home & addEmployed and form - respons and css ok

--- a/src/pages/addEmployee/_addEmployee.scss
+++ b/src/pages/addEmployee/_addEmployee.scss
@@ -1,18 +1,26 @@
-
-
 .create {
+  width: 100%;
+  height: 90vh;
+  padding-bottom: 25px;
+
+  &__wrapperForm {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-content: stretch;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin:50px;
-    width: 500px;
-    position: absolute;
+  }
+    &__logo {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 150px;
+      margin: 15px;
+    }
+    &__name,
+    &__title {
+      color: $green;
+    }
+  }
 
-    left: 30%;
-    box-shadow: 1px 2px 6px;
-    border-radius: 5px;
-
-
-}
-  
