--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -6,23 +6,27 @@
   font-size: 22px;
   padding-left: 10%;
   height: 65px;
- 
+  @include min-max($smartphone, $smartLarge - 1) {
+    font-size: 15px;
+  }
+
   a {
     text-decoration: none;
     margin: 10px;
-    color:white;
+    color: white;
     font-weight: 600;
   }
   &__link {
     display: flex;
     gap: 30px;
-   
+    @include min-max($smartphone, $smartLarge - 1) {
+      text-align: center;
+      display: flex;
+      align-items: center;
+    }
   }
 
-&__link a:hover {
-  border-bottom: 2px solid #3a3a38; 
-  
+  &__link a:hover {
+    border-bottom: 2px solid #3a3a38;
+  }
 }
-
-}
-  
