--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -1,4 +1,3 @@
-
 .homePage {
   width: 100%;
   height: 100vh;
@@ -7,134 +6,136 @@
   justify-content: flex-start;
   gap: 12px;
   align-items: center;
- h1 {
-  font-size: 45px;
-  @include min-max ($tablet, $desktop - 1){
-    font-size: 29px;
+  overflow-y: auto;
+  &__current {
+    width: 80vw;
+    height: 80vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid $green;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    @include min-max($smartLarge, $desktop - 1){
+width: 66vh;
   }
-
-    @include  min-max ($smartphone, $smartLarge - 1 ) {
-      font-size: 20px;
-      margin-bottom: 50px;
+    @include min-max($smartphone, $smartLarge - 1) {
+      flex-direction: column;
+      border: none;
     }
- }
-
-&__current {
-width: 80vw;
-  height: 80vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid $green;
-  border-radius: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background:white;
-  @include min-max ($smartphone, $smartLarge - 1) {
+  }
+  &__content {
+    display: flex;
+    height: 80%;
     flex-direction: column;
-    border: none;
- 
+    justify-content: space-around;
+    padding: 10px;
+
+    @include min-max($smartphone, $smartLarge - 1) {
+      display: inherit;
+      gap: inherit;
+    }
+  }
+  &__subtitle {
+    margin-top: 8px;
+    font-size: 25px;
+    color: #666;
+    text-align: center;
+
+    @include min-max($smartphone, $smartLarge - 1) {
+      font-size: 19px;
+    }
   }
 
-}
-&__infos {
-  @include min-max ($smartphone, $smartLarge - 1) {
-    margin-top: 50%;
+  &__title {
+    text-align: center;
   }
-}
-
-span  {
-  display: flex;
-  font-size: 35px;
-  color:$greenButton;
-  @include min-max ($smartphone, $smartLarge - 1 ){
-    font-size: 19px;
-    line-height: 10px;
+  &__greenSpan {
+    color: $green;
   }
-}
-
-&__subtitle {
-  margin-top: 8px;
-  font-size: 25px;
-  color: #666;
-  @include min-max($smartphone, $smartLarge - 1) {
-    font-size: 19px;
-  }
-}
-
-
-
-
-
-.button {
-  display: flex;
-  flex-direction: row;
-  border-radius: 4px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  margin-top: 20px;
-  gap: 8px;
-  &__add {
-  background-color: $greenButton;
-  color: white;
-  text-align: center;
-  }
-  @include min-max($tablet, $desktop - 1){
+  h1 {
+    font-size: 45px;
     
-   
-  }
-  
 
+    @include min-max($smartLarge, $desktop - 1) {
+      font-size: 22px;
+    }
 
-&__view {
-  background-color: white;
-  color:$greenButton;
-  text-align: center;
-
-}
-&__view,
-&__add {
-  width: 100%;
-  border-radius: 5px;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 40px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-}
-
-}
-.image-container {
-  display: flex;
-  flex-direction: column;
-  gap:4rem;
-  border: 1px solid rgb(129, 134, 129);
-  box-shadow: 1px 2px rgb(142, 143, 140);
-  margin: 10px;
-  @include min-max ($smartphone, $smartLarge - 1){
-    gap:inherit;
-  }
-  
-  
-}
-.image {
-  width: 100%;
-}
-
-.homePage__content {
-  display: flex;
-  height: 80%;
-  flex-direction: column;
-  justify-content: space-around;
-  padding: 10px;
-  @include min-max ($smartphone, $smartLarge - 1) {
-    display: inherit;
-    gap: inherit;
+    @include min-max($smartphone, $smartLarge - 1) {
+      font-size: 20px;
+    
+    }
   }
 }
-}
+
+  // span {
+  //   display: flex;
+  //   font-size: 35px;
+  //   color: $greenButton;
+  
+
+  //   @include min-max($smartphone, $smartLarge - 1) {
+  //     font-size: 19px;
+  //     line-height: 10px;
+  //     text-align: center;
+  //   }
+  // }
+
+
+
+  .button {
+    display: flex;
+    flex-direction: row;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 20px;
+    gap: 8px;
+
+    &__add {
+      background-color: $greenButton;
+      color: white;
+      text-align: center;
+    }
+
+    &__view {
+      background-color: white;
+      color: $greenButton;
+      text-align: center;
+    }
+
+    &__view,
+    &__add {
+      width: 100%;
+      border-radius: 5px;
+      text-decoration: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  .image-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    border: 1px solid rgb(129, 134, 129);
+    box-shadow: 1px 2px rgb(142, 143, 140);
+    margin: 10px;
+
+    @include min-max($smartphone, $smartLarge - 1) {
+      gap: inherit;
+    }
+  }
+
+  .image {
+    width: 100%;
+  }
