--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,5 +5,6 @@
 @import "components/navbar/navbar";
 @import "components/footer/footer";
 @import "components/form/form";
+@import "components/calendar/datepicker";
 @import "pages/addEmployee/addEmployee";
 
