--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,10 +1,15 @@
 @import "style/mixins";
 @import "style/settings";
 
-@import "pages/home/home";
+
 @import "components/navbar/navbar";
 @import "components/footer/footer";
 @import "components/form/form";
 @import "components/calendar/datepicker";
+@import "components/pagination/pagination";
+
+@import "pages/home/home";
 @import "pages/addEmployee/addEmployee";
+@import "pages/listEmployees/listEmployee";
+
 
