🚑 Search on ListEmployed ok

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -22,10 +22,9 @@
   }
   
   .active a {
-    background-color: #4CAF50;
+    background-color: #6f8f6f;
     color: white;
   }
- 
   
   .page-item {
     margin: 0 4px;
