--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,7 +6,7 @@
 @import "components/form/form";
 @import "components/calendar/datepicker";
 @import "components/pagination/pagination";
-
+@import "components/search/employeeSearch";
 
 @import "pages/home/home";
 @import "pages/addEmployee/addEmployee";
