--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -21,5 +21,5 @@ $SuperBig : 1660px;
 // colors
 
 $green: #458846 ;
-$greenButton: rgb(111, 143, 111);
+$greenButton: #6f8f6f;
 $greenLight: rgb(221, 228, 221);
