--- a/src/pages/addEmployee/_addEmployee.scss
+++ b/src/pages/addEmployee/_addEmployee.scss
@@ -21,6 +21,9 @@
     &__name,
     &__title {
       color: $green;
+      @include min-max($smartphone, $smartLarge - 1 ) {
+        display: none;
+      }
     }
   }
 
