--- a/src/components/search/_employeeSearch.scss
+++ b/src/components/search/_employeeSearch.scss
@@ -1,31 +1,57 @@
+/*** component React searchBox   ***/
+.sc-eDvSVe {
+  font-size: 14px;
+  padding: 10px 20px;
+  border: none;
+  color: #000;
+  width: 100%;
+}
 
+.sc-ivKppU.gSejHU {
+  display: none;
+}
 
-.sc-eDvSVe   {
-    font-size: 14px;
-    padding: 10px 20px;
-    border: none;
-    color: #000;
-    width: 28%;
-    margin: auto;
-    display: flex;
- 
+/*** input search ***/
+.sc-eDvSVe.jifbFL {
+  width: 25rem;
+
+  @include min-max($smartphone, $smartLarge - 1) {
+    width: 18rem;
   }
-  .employee-search {
-    /* Styles pour la div parent */
-    /* Par exemple, vous pouvez définir la largeur et le padding */
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .employee-search label {
-    /* Styles pour le label */
-    /* Par exemple, vous pouvez définir la taille de la police et la couleur */
-    font-size: 23px;
-    color: green;
+}
+
+/*** ajout style ***/
+.search {
+  width: 100%;
+  margin: center;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  @include min-max($smartphone, $desktop - 1) {}
+
+  &__error {
     display: flex;
-    align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
+    align-items: center;
+    color: red;
+    font-weight: 700;
   }
-  
+}
+
+.search label {
+  font-size: 15px;
+  color: green;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  @include min-max($smartphone, $smartLarge - 1) {
+    justify-content: inherit;
+    text-align: center;
+  }
+}
