--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,6 +9,7 @@
 @import "components/pagination/pagination";
 @import "components/search/employeeSearch";
 @import "components/customDataTable/custom";
+@import "components/spinner/spinner";
 
 /*** PAGES ***/
 @import "pages/home/home";
