--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -20,7 +20,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
+    background: #f5f5f5;
     @include min-max($smartLarge, $desktop - 1){
 width: 66vh;
   }
@@ -126,7 +126,6 @@ width: 66vh;
   .image-container {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
     border: 1px solid rgb(129, 134, 129);
     box-shadow: 1px 2px rgb(142, 143, 140);
     margin: 10px;
