--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -21,9 +21,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: #f5f5f5;
-    @include min-max($smartLarge, $desktop - 1){
-width: 66vh;
-  }
+    @include min-max($smartLarge, $desktop - 1) {
+      width: 62vh;
+    }
     @include min-max($smartphone, $smartLarge - 1) {
       flex-direction: column;
       border: none;
@@ -34,12 +34,22 @@ width: 66vh;
     height: 80%;
     flex-direction: column;
     justify-content: space-around;
-    padding: 10px;
+     padding-left: 10px;
 
     @include min-max($smartphone, $smartLarge - 1) {
       display: inherit;
       gap: inherit;
+      padding-left: 10px;
     }
+  }
+  &__infos {
+       display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include min-max ($smartphone, $smartLarge - 1 ) {
+      margin-top: 50px;
+    }
+   
   }
   &__subtitle {
     margin-top: 8px;
@@ -49,6 +59,11 @@ width: 66vh;
 
     @include min-max($smartphone, $smartLarge - 1) {
       font-size: 19px;
+      display: none;
+    }
+    @include min-max($smartLarge, $desktop - 1) {
+      font-size: 18px;
+     
     }
   }
 
@@ -57,84 +72,90 @@ width: 66vh;
   }
   &__greenSpan {
     color: $green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
   }
+  h4 {
+    font-size: 23px;
+    text-align: center;
+  }
+  
   h1 {
     font-size: 45px;
-    
-
     @include min-max($smartLarge, $desktop - 1) {
       font-size: 22px;
     }
-
+    @include min-max($desktop, $big-desktop - 1) {
+      font-size: 30px;
+    }
     @include min-max($smartphone, $smartLarge - 1) {
-      font-size: 20px;
-    
+      font-size: 15px;
+    }
+  }
+
+}
+.button {
+  display: flex;
+  flex-direction: row;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 20px;
+  gap: 8px;
+
+  &__add {
+    background-color: $greenButton;
+    color: white;
+    text-align: center;
+  }
+
+  &__view {
+    background-color: white;
+    color: $greenButton;
+    text-align: center;
+  }
+
+  &__view,
+  &__add {
+    width: 100%;
+    border-radius: 5px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    @include min-max($smartphone, $smartLarge - 1 ) {
+      height: 30px;
     }
   }
 }
 
-  // span {
-  //   display: flex;
-  //   font-size: 35px;
-  //   color: $greenButton;
-  
+.image-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(129, 134, 129);
+  box-shadow: 1px 2px rgb(142, 143, 140);
+  margin: 10px;
 
-  //   @include min-max($smartphone, $smartLarge - 1) {
-  //     font-size: 19px;
-  //     line-height: 10px;
-  //     text-align: center;
-  //   }
-  // }
-
-
-
-  .button {
-    display: flex;
-    flex-direction: row;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 20px;
-    gap: 8px;
-
-    &__add {
-      background-color: $greenButton;
-      color: white;
-      text-align: center;
-    }
-
-    &__view {
-      background-color: white;
-      color: $greenButton;
-      text-align: center;
-    }
-
-    &__view,
-    &__add {
-      width: 100%;
-      border-radius: 5px;
-      text-decoration: none;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 40px;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    }
+  @include min-max($smartphone, $smartLarge - 1) {
+    gap: inherit;
   }
+}
 
-  .image-container {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(129, 134, 129);
-    box-shadow: 1px 2px rgb(142, 143, 140);
-    margin: 10px;
+.image {
+  width: 100%;
+}
 
-    @include min-max($smartphone, $smartLarge - 1) {
-      gap: inherit;
-    }
+.homePage__group {
+  height: 80px;
+  margin-top: 20px;
+
+  @include min-max($smartphone, $desktop - 1) {
+    height: 60px;
+    
   }
-
-  .image {
-    width: 100%;
-  }
+}
