🚑 pagination - search done

--- a/src/components/customDataTable/_custom.scss
+++ b/src/components/customDataTable/_custom.scss
@@ -102,3 +102,15 @@
 .rdt_TableCell[data-column-id="8"] [data-tag="allowRowEvents"] {
   width: 50px;
 }
+
+.jvZQt {
+  width:60%;
+
+}
+.cFiKPt {
+  align-items: normal;
+}
+
+.dJLoil {
+  display: inherit;
+}
