--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -9,8 +9,8 @@
    justify-content: center;
    font-size: 15px;
    position: absolute;
-   bottom: 6%;
-   left: 40%;
+   bottom: 63%;
+   left: 23%;
    @include min-max($smartphone, $smartLarge - 1 ) {
     left: 24%;
    }
@@ -37,3 +37,35 @@
   .hidden {
     display: none;
   }
+/* Ajoutez ces styles dans votre fichier CSS existant ou un nouveau fichier */
+
+
+.pagination-search {
+  display: flex;
+    align-content: center;
+    flex-direction: row-reverse;
+    align-items: center;
+    width: 92%;
+    &__toggle {
+      margin: 10px;
+      display: flex;
+      align-items: flex-start;
+      flex-direction: row;
+      justify-content: flex-end;
+      position: absolute;
+      top: 33%;
+      left: 10%;
+    }
+    &__count {
+      display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        position: absolute;
+         top: 34%;
+         left: 37%;
+    }
+}
+.page {
+  padding-left: 5px;
+  margin-left: 10px;
+}
