--- a/src/components/search/_employeeSearch.scss
+++ b/src/components/search/_employeeSearch.scss
@@ -13,7 +13,7 @@
 
 /*** input search ***/
 .sc-eDvSVe.jifbFL {
-  width: 25rem;
+  width: 20rem;
 
   @include min-max($smartphone, $smartLarge - 1) {
     width: 18rem;
@@ -22,12 +22,11 @@
 
 /*** ajout style ***/
 .search {
-  width: 100%;
-  margin: center;
+  width: 93%;
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
 
   @include min-max($smartphone, $desktop - 1) {}
