--- a/src/pages/listEmployees/_listEmployees.scss
+++ b/src/pages/listEmployees/_listEmployees.scss
@@ -27,6 +27,10 @@
       width: 100px;
     }
   }
+  &__change {
+    display: flex;
+    align-items: center;
+  }
 }
 
 table {
@@ -52,4 +56,14 @@ th {
 
 .uppercase {
   text-transform: capitalize;
+}
+.delete {
+  border: none;
+  color: white;
+  background-color: green;
+  margin-left: 10px;
+  width:40px;
+  height:40px;
+  border-radius: 50%;
+  top:5%;
 }
