--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,7 +10,7 @@
 @import "components/search/employeeSearch";
 @import "components/customDataTable/custom";
 @import "components/spinner/spinner";
-
+@import "components/modal/secondModal";
 /*** PAGES ***/
 @import "pages/home/home";
 @import "pages/addEmployee/addEmployee";
