🚑 search-pagination-add employee : ok

--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -1,19 +1,9 @@
 .pagination {
     display: flex;
     list-style: none;
-    margin: 0;
-    padding: 0;
-    flex-direction: row;
     align-items: center;
-   flex-wrap: wrap;
-   justify-content: center;
-   font-size: 15px;
-   position: absolute;
-   bottom: 63%;
-   left: 23%;
-   @include min-max($smartphone, $smartLarge - 1 ) {
-    left: 24%;
-   }
+    order: 2;
+    margin-left: 40px;
   }
   
   .page-item a {
@@ -44,25 +34,12 @@
   display: flex;
     align-content: center;
     flex-direction: row-reverse;
+    justify-content: space-between;
     align-items: center;
-    width: 92%;
+    width: 80%;
+    margin: auto;
     &__toggle {
-      margin: 10px;
       display: flex;
-      align-items: flex-start;
-      flex-direction: row;
-      justify-content: flex-end;
-      position: absolute;
-      top: 33%;
-      left: 10%;
-    }
-    &__count {
-      display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        position: absolute;
-         top: 34%;
-         left: 37%;
     }
 }
 .page {
