--- a/src/components/calendar/_datepicker.scss
+++ b/src/components/calendar/_datepicker.scss
@@ -2,7 +2,7 @@
 .customCalendar {
   box-shadow: 3px 3px 9px rgb(138, 139, 138);
   border-radius: 5px;
-  width: 350px;
+  width: 21.875rem;
 }
 // boutons du calendrier
 .customCalendar button {
