--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -7,12 +7,12 @@
   align-items: center;
   padding: 1rem 0 1.5rem;
   background-color: $green;
-  height: 25px;
+  height: 1.563rem;
 
   &__content {
     color: white;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 0.875rem;
     display: flex;
     align-items: center;
   }
