--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -1,20 +1,21 @@
+
+
 .navBar {
   display: flex;
   flex-direction: row;
   background: #458846;
   align-items: center;
-  font-size: 22px;
-  height: 65px;
+  font-size: 1.375rem;
+  height: 4.063rem;
   @include min-max($smartphone, $smartLarge - 1) {
-    font-size: 15px;
+    font-size: 0.938rem;
     justify-content: space-evenly;
   }
   @include min-max($smartLarge, $tablet - 1){
     justify-content: space-evenly;
-    
   }
   @include min-max($smartLarge, $desktop - 1){
-    font-size: 19px;
+    font-size: 1.188rem;
   }
   a {
     text-decoration: none;
@@ -24,7 +25,7 @@
   }
   &__link {
     display: flex;
-    gap: 30px;
+    gap: 1.875rem;
     @include min-max($smartphone, $smartLarge - 1) {
       text-align: center;
       display: flex;
