--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -1,48 +1,49 @@
 .pagination {
-    display: flex;
-    list-style: none;
-    align-items: center;
-    order: 2;
-    margin-left: 40px;
-  }
-  
-  .page-item a {
-    display: block;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  
-  .page-item:hover a {
-    background-color: #eee;
-  }
-  
-  .active a {
-    background-color: #6f8f6f;
-    color: white;
-  }
-  
-  .page-item {
-    margin: 0 4px;
-  }
-  .hidden {
-    display: none;
-  }
-/* Ajoutez ces styles dans votre fichier CSS existant ou un nouveau fichier */
+  display: flex;
+  list-style: none;
+  align-items: center;
+  order: 2;
+  margin-left: 2.5rem;
 
+}
+
+.page-item a {
+  display: block;
+  padding: 8px 10px;
+  text-decoration: none;
+
+}
+
+.page-item:hover a {
+  background-color: $greenButton;
+}
+
+.active a {
+  background-color: #6f8f6f;
+  color: white;
+}
+
+.hidden {
+  display: none;
+}
 
 .pagination-search {
   display: flex;
-    align-content: center;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    margin: auto;
-    &__toggle {
-      display: flex;
-    }
+  align-content: center;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  margin: auto;
+  @include min-max($tablet, $desktop -1) {
+    font-size: 3px;
+    flex-wrap: nowrap;
+    width: 100%;
+  }
+
 }
-.page {
-  padding-left: 5px;
-  margin-left: 10px;
-}
+
+  .page {
+    padding-left: 5px;
+    margin-left: 10px;
+  }
