--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,6 +15,7 @@
 @import "pages/home/home";
 @import "pages/addEmployee/addEmployee";
 @import "pages/listEmployees/listEmployees";
+@import "pages/notFound/notFound";
 
 
 
