--- a/src/components/spinner/_spinner.scss
+++ b/src/components/spinner/_spinner.scss
@@ -1,6 +1,6 @@
 .spinner {
-  width: 140px;
-  height: 140px;
+  width: 8.75rem;
+  height: 8.75rem;
   position: absolute;
   top: 50%;
   left: 50%;
