--- a/src/pages/addEmployee/_addEmployee.scss
+++ b/src/pages/addEmployee/_addEmployee.scss
@@ -1,7 +1,7 @@
 .create {
   width: 100%;
   height: 90vh;
-  padding-bottom: 25px;
+  padding-bottom: 1.563;
 
   &__wrapperForm {
     display: flex;
@@ -15,8 +15,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 150px;
-      margin: 15px;
+      width: 9.375rem;
+      margin: 0.938rem;
     }
     &__name,
     &__title {
